--- a/bai1a.html
+++ b/bai1a.html
@@ -5,7 +5,7 @@
 	<title>bai1a</title>
 </head>
 <body bgcolor="black">
-	<img src="./Banner.gif" width="100%" height="125"><br><br>
+	<img src="./WORK.GIF" width="100%" height="125"><br><br>
 	<font color="white">
 		Excite@Home <font color="red"><u><b>Reduces workforce</b></u></font> as operations wind down.<br><br>
 
